# social-network-inspiration

./: .dockerignore  docker-compose.yml  dockerfile  pyproject.toml
backend/: settings.py  urls.py
backend/api/: admin.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_post_follow.py  0003_alter_customuser_options_customuser_following_and_more.py
backend/api/serializer/: serializers.py
frontend/frontend/: index.html
frontend/frontend/src/: App.jsx  Dashboard.css  Dashboard.jsx  Home.css  Home.jsx  Login.css  Login.jsx  Register.css  Register.jsx  api.js
